// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonControl /> snapshot should match snapshot 1`] = `
<ButtonControl
  control="close"
>
  <ButtonSimple
    className="md-button-control-wrapper"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              className="md-icon-wrapper"
            >
              <svg
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                stroke="currentColor"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with className 1`] = `
<ButtonControl
  className="example-class"
  control="close"
>
  <ButtonSimple
    className="md-button-control-wrapper example-class"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper example-class"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              className="md-icon-wrapper"
            >
              <svg
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                stroke="currentColor"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with id 1`] = `
<ButtonControl
  control="close"
  id="example-id"
>
  <ButtonSimple
    className="md-button-control-wrapper"
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper"
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              className="md-icon-wrapper"
            >
              <svg
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                stroke="currentColor"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with isCircular 1`] = `
<ButtonControl
  control="close"
  isCircular={true}
>
  <ButtonSimple
    className="md-button-control-wrapper"
    data-circular={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper"
          data-circular={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              className="md-icon-wrapper"
            >
              <svg
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                stroke="currentColor"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with style 1`] = `
<ButtonControl
  control="close"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-button-control-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              className="md-icon-wrapper"
            >
              <svg
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                stroke="currentColor"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;
